...
			android:padding="@dimen/margin_large"
			android:text="@string/enter_email"
      android:textSize="?attr/textTitleSize"
			android:textColor="?attr/textTitleColor"/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/email_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/title_email"
			android:layout_centerHorizontal="true"
			app:errorEnabled="true">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/edit_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:imeOptions="actionDone"
				android:inputType="textEmailAddress"
				android:maxLines="1"/>
			<requestFocus/>
...
			android:padding="@dimen/margin_large"
			android:text="@string/enter_password"
			android:textSize="?attr/textTitleSize"
			android:textColor="?attr/textTitleColor"/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/password_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/title_password"
			android:layout_centerHorizontal="true"
			app:errorEnabled="true">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/edit_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/enter_password"
				android:imeOptions="actionDone"
				android:inputType="textPassword"
				android:maxLines="1"/>
		</android.support.design.widget.TextInputLayout>

		<Button
			android:id="@+id/btn_sign_in"
			style="@style/BriarButton.Default"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/password_layout"
			android:layout_marginTop="@dimen/margin_medium"
			android:text="@string/sign_in_button"/>
...
