...
	<string name="no_private_messages">This is the conversation view.\n\nThere seems to be a lack of conversation.\n\nJust tap the input field at the bottom to start a conversation.</string>
	<string name="message_hint">Type message</string>
	<string name="delete_contact">Delete contact</string>
	<string name="dialog_title_delete_contact">Confirm Contact Deletion</string>
	<string name="dialog_message_delete_contact">Are you sure that you want to remove this contact and all messages exchanged with this contact?</string>
	<string name="contact_deleted_toast">Contact deleted</string>
	<string name="sort_contact_alphabetically">Sort Alphabetically</string>
	<string name="sort_contact_recent">Recent</string>

	<!-- Adding Contacts -->
	<string name="add_contact_title">Add a Contact</string>
	<string name="face_to_face">You must meet up with the person you want to add as a contact.\n\nThis will prevent anyone from impersonating you or reading your messages in future.</string>
	<string name="continue_button">Continue</string>
	<string name="add_by_email_button">Add By Email</string>
	<string name="connection_failed">Connection failed</string>
	<string name="try_again_button">Try Again</string>
	<string name="waiting_for_contact_to_scan">Waiting for contact to scan and connect\u2026</string>
	<string name="exchanging_contact_details">Exchanging contact details\u2026</string>
	<string name="contact_added_toast">Contact added: %s</string>
	<string name="contact_already_exists">Contact %s already exists</string>
...
	<string name="profile_data_description_input">profile_data_description_input</string>
	<string name="view_profile">View Profile</string>
	<string name="delete_message">Delete Message</string>

	<!-- Full screen image -->
	<string name="fullscreen_image">Fullscreen Image</string>
	<string name="search_contacts">Search Contacts</string>

	<!-- File viewer image -->
	<string name="activity_webview_file">Download File</string>

</resources>

