...
			android:padding="@dimen/margin_large"
			android:text="Enter the email address to add:"
      android:textSize="?attr/textTitleSize"
			android:textColor="?attr/textTitleColor"/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/email_to_add_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/title_email_to_add"
			android:layout_centerHorizontal="true"
			app:errorEnabled="true">

...
				android:inputType="textEmailAddress"
				android:maxLines="1"/>
			<requestFocus/>
		</android.support.design.widget.TextInputLayout>

		<Button
			android:id="@+id/btn_add_by_email"
			style="@style/BriarButton.Default"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/email_to_add_layout"
			android:layout_marginTop="@dimen/margin_medium"
			android:text="Add Contact"/>
	</RelativeLayout>

</ScrollView>
