<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	android:id="@+id/scrollView"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingBottom="@dimen/margin_activity_vertical"
		android:paddingEnd="@dimen/margin_activity_horizontal"
		android:paddingLeft="@dimen/margin_activity_horizontal"
		android:paddingRight="@dimen/margin_activity_horizontal"
		android:paddingStart="@dimen/margin_activity_horizontal"
		android:paddingTop="@dimen/margin_activity_vertical">

		<ImageView
			android:id="@+id/imageView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:adjustViewBounds="true"
			android:scaleType="fitCenter"
			android:src="?attr/qr_code_intro"
			tools:ignore="ContentDescription"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/margin_small"
			android:layout_marginRight="@dimen/margin_small"
			android:layout_marginTop="@dimen/margin_xlarge"
			android:background="@drawable/border_explanation"
			android:orientation="vertical"
			android:padding="@dimen/margin_large">

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:adjustViewBounds="true"
				android:padding="@dimen/margin_medium"
				android:src="?attr/qr_code_explanation"
				android:contentDescription="@string/face_to_face"/>

			<TextView
				style="@style/BriarTextBody"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/margin_medium"
				android:text="@string/face_to_face"
				android:textColor="?attr/textBodyColor"
				android:textSize="4pt"/>

		</LinearLayout>

		<Button
			android:id="@+id/continueButton"
			style="@style/BriarButton.Default"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="@dimen/margin_medium"
			android:text="@string/continue_button"/>

		<Button
			android:id="@+id/addByEmailButton"
			style="@style/BriarButton.Default"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="@dimen/margin_medium"
			android:text="@string/add_by_email_button"/>

	</LinearLayout>

</ScrollView>