...
			app:hintEnabled="false"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/email_entry"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/enter_email"
				android:imeOptions="actionNext"
				android:inputType="text|textCapWords"
				android:maxLines="1"/>
...
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/email_entry_wrapper"
			tools:enabled="true"/>

		<Button
			android:id="@+id/btn_log_in"
			style="@style/BriarButton.Default"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/next"
			android:text="Log In Instead"
			app:layout_constraintLeft_toLeftOf="parent"
...
